crates/model/tests/compile_fail/resource_reserved_keyword.stderr
error: `rate` is a reserved keyword in capacity blocks (used to set the capacity kind); choose a different field name
 --> tests/compile_fail/resource_reserved_keyword.rs:4:33
  |
4 |         capacity: { slots: u64, rate: u64 },
  |                                 ^^^^
